--- a/Shoottpspremieresemaine/Shoottpspremieresemaine.vcxproj
+++ b/Shoottpspremieresemaine/Shoottpspremieresemaine.vcxproj
@@ -71,8 +71,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\rweigel\Documents\Shoottpspremieresemaine\ShootGameProjectArrived\SFML-3.0.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\rweigel\Documents\Shoottpspremieresemaine\ShootGameProjectArrived\SFML-3.0.0\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\SFML-3.0.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\SFML-3.0.0\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\Users\rweigel\Documents\Shoottpspremieresemaine\ShootGameProjectArrived\SFML-3.0.0\include\;$(IncludePath)</IncludePath>
@@ -108,7 +108,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>SFML_STATIC;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
@@ -133,17 +133,23 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>opengl32.lib;winmm.lib;freetype.lib;gdi32.lib;sfml-system-s-d.lib;sfml-graphics-s-d.lib;sfml-window-s-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>.\SFML-3.0.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\SFML-3.0.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="Manager.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Shoottpspremieresemaine.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Shoottpspremieresemaine.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Shoottpspremieresemaine.rc" />
